# pi_app_repo

./: .gitignore  README.md  test_display_image.py
app/: __init__.py  app.py  buttons.py  camera.py  config.py  display.py  modes.py  overlays.py  processing.py
docs/: architecture.md  raspi_setup.md  setup.md  thermal-viewer.service
native/: CMakeLists.txt  seek_wrapper.cpp
tests/: conftest.py  test_config.py  test_modes.py
